# RampFloat

./: CMakeLists.txt  Dockerfile  RampFloat.cpp  RampFloat.h  main  main.cpp  testrunner.cpp  version.h
.github/scripts/: changeversion.sh
.github/workflows/: github-actions-demo.yml
tools/embedded/: script.ps1
